feat: finalize auth module
