# apps/api/src/users/dto/create-user.input.ts
@@ -1,5 +1,0 @@
-export interface CreateUserInput {
-  email: string;
-  name: string;
-  password: string;
-}
